--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ highlighter: null
 markdown: kramdown
 extensions: [fenced_code_blocks]
 excerpt_separator: "<!--more-->"
-url: https://heliumjk.github.io
-baseurl: "/heliumjk.github.io"
+url: https://lbterapiaocupacional.github.io
+baseurl: "/lbterapiaocupacional.github.io"
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
@@ -21,23 +21,21 @@ google_ad_client: ca-pub-9204963049240271
 post_limit: 5
 
 
-title : Helium Jekyll
-tagline: Bootstrap 4 UI kit for jekyll
+title : LBTO
+tagline: Terapia Ocupacional
 author : 
-  name : Antonio Trento
-  site: https://lantoniotrento.github.io
-  description : I&#39;m a web master interested in communication applied to web marketing.
+  name : Luana de Barros
+  site: https://lbterapiaocupacional.github.io
+  description : Terapeuta Ocupacional em formação.
   image : social-image.png
-  email : lantoniotrento@gmail.com
-  github : antoniotrento
-  twitter : lantoniotrento
-  facebook: lantoniotrento
-  linkedin: antoniotrento
-  instagram: lantoniotrento
-  pinterest: antoniotrento
+  email : luanadebarrosto@gmail.com
+  github : lbterapiaocupacional
+  facebook: mundodaterapiaocupacional
+  linkedin: luana-de-barros
+  instagram: mundodaterapiaocupacional
   feedburner : 
 
-twitter_username: lantoniotrento
+# twitter_username: lantoniotrento
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
 # Most places will/should use BASE_PATH to make the urls
@@ -46,7 +44,7 @@ twitter_username: lantoniotrento
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : https://heliumjk.github.io
+production_url : https://lbterapiaocupacional.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
